packages/ses/test/error/issue-2941/test3/error-trapping-no-lockdown.demo.js
import '../../../../index.js';

try {
  throw Error(`karramba`);
} catch (e) {
  throw Error('que?', { cause: e });
}
